--- a/predecir.html
+++ b/predecir.html
@@ -23,9 +23,20 @@
 	<script src="js/leaflet.groupedlayercontrol.js"></script>
 	<script src="js/leaflet.markercluster.js"></script>
 	<!-- ALL assets HERE -->
-	<script src="data/eventosReales.1.json"></script>
+	<script src="data/eventosReales.json"></script>
 	<script src="data/parroquiasGJ.geojson"></script>
 	
+	<style>
+			@media screen and (max-width: 768px) {
+				#menu-toggle:checked + .nav-menu {
+				display: block;
+				z-index: 2;
+				}
+			}
+			#map{
+				z-index: 1;
+			}
+		</style>
 </head>
 <body>
 	
@@ -39,12 +50,13 @@
 							</a>
 							<a href="index.html" class="nav-item">Crime Predict</a>
 						</div>
-						<div class="nav-toggle">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
+						<label for="menu-toggle" class="nav-toggle">
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+							</label>
+							<input type="checkbox" id="menu-toggle" class="is-hidden"/>
 	
 						<div class="nav-right nav-menu">
 							<a href="index.html" class="nav-item">Home</a>
@@ -70,7 +82,7 @@
 				<div class="columns">
 					<div class="column is-8">
 							<article class="tile is-child is-info notification is-paddingless">
-								<div id="map" style="height: 28rem; color: black"></div>
+								<div id="map" style="height: 28rem; color: black;"></div>
 							</article>
 						</div>
 					<div class="column">
@@ -122,7 +134,7 @@
 							<div class="field">
 							  <label class="label">Evento</label>
 							  <div class="control has-icons-left has-icons-right">
-							    <input class="input is-info" id="txtResultado" type="text" value="" disabled="">
+							    <input class="input is-info is-hidden" id="txtResultado" type="text" value="" disabled="">
 							    <span class="icon is-small is-left">
 							      <i class="fa fa-map-o"></i>
 							    </span>
