--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	    <nav class="tabs is-boxed is-fullwidth">
 	      <div class="container">
 	        <ul>
-	          <li class="is-active"><a>Home</a></li>
+	          <li class="is-active"><a>En línea desde 7/09/17 :D </a></li>
 	          <li>
 	          	<a href="#">
 	          		<span class="icon">
